feat(web): add seo and social meta tags
improve index.html metadata for discoverability and link previews
by adding description, keywords, canonical, open graph, and twitter
card tags, plus manifest and apple web app metadata

also normalize favicon links to /logo.png and update viewport to
use an explicit initial-scale value

--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -4,12 +4,56 @@
     <meta charset="utf-8" />
     <title>Princesse & Super-Héros : Mayra & Luca !</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/x-icon" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Invitation anniversaire de Mayra & Luca - thème Princesse & Super-Héros, RSVP en ligne et informations pratiques."
+    />
+    <meta
+      name="keywords"
+      content="anniversaire, invitation, RSVP, princesse, super-héros, Mayra, Luca, fête enfants, Bremerhaven"
+    />
+    <meta name="author" content="Papa Mayra & Luca" />
+    <!-- <meta name="theme-color" content="#4f46e5" /> -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Mayra & Luca" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="/" />
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Princesse & Super-Héros : l'anniversaire de Mayra & Luca" />
+    <meta
+      property="og:description"
+      content="Retrouvez le programme de la fête et confirmez votre présence pour l'anniversaire de Mayra & Luca."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Mayra & Luca - invitation anniversaire" />
+    <meta property="og:url" content="/" />
+    <meta property="og:site_name" content="Mayra & Luca" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:locale:alternate" content="de_DE" />
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Anniversaire Mayra & Luca - Princesse & Super-Héros" />
+    <meta
+      name="twitter:description"
+      content="Invitation anniversaire avec RSVP, infos pratiques et programme de la fête."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image:alt" content="Mayra & Luca - invitation anniversaire" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="logo.png" />
   </head>
   <body>
     <app-root></app-root>
