--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -18,7 +18,7 @@
       content="anniversaire, invitation, RSVP, princesse, super-héros, Mayra, Luca, fête enfants, Bremerhaven"
     />
     <meta name="author" content="Papa Mayra & Luca" />
-    <!-- <meta name="theme-color" content="#4f46e5" /> -->
+    <meta name="theme-color" content="#4f46e5" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Mayra & Luca" />
